# TradingAgentMCP

./: .env.example  .gitignore  .opencode.json  AGENTS.md  CHANGELOG.md  README.md  debug_trading_agent.py  main.py  pyproject.toml  re-design.md  requirements.txt  solution-prd.md  test.py
docker/: .dockerignore  Dockerfile  build_docker.sh  docker-compose.yml
skills/remote-mcp-fastmcp/: SKILL.md  call_mcp.sh  render_report.py  template.html
skills/trading-agents/: NEW_SKILL.md  SKILL.md
tradingagents/: default_config.py
tradingagents/agents/: schemas.py
tradingagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  sentiment_analyst.py
tradingagents/agents/managers/: portfolio_manager.py  research_manager.py
tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
tradingagents/agents/risk_mgmt/: aggressive_debator.py  conservative_debator.py  neutral_debator.py
tradingagents/agents/trader/: trader.py
tradingagents/agents/utils/: agent_states.py  agent_utils.py  core_stock_tools.py  fundamental_data_tools.py  memory.py  news_data_tools.py  rating.py  (+1 more)
tradingagents/dataflows/: config.py  interface.py
tradingagents/graph/: __init__.py  analyst_execution.py  conditional_logic.py  mini_graph.py  propagation.py  reflection.py  setup.py  signal_processing.py  trading_graph.py
tradingagents/llm_clients/: anthropic_client.py  google_client.py  openai_client.py
tradingagents_mcp/: __init__.py  __main__.py  prompts.py  server.py  shared_context.py  trade_calendar.py  validators.py
(+6 files in other folders)
